# LifeScience-agents

./: .gitignore  README.md  a2as.yaml
clinical-research-synthesizer/: README.md  pyproject.toml
clinical-research-synthesizer/clinical_research_synthesizer/: agent.py  prompt.py
clinical-research-synthesizer/clinical_research_synthesizer/specialists/clinical_trial_specialist/: agent.py  prompt.py
clinical-research-synthesizer/clinical_research_synthesizer/specialists/clinical_trial_specialist/tools/: extract_preconditions.py  scrape_trial_criteria.py
clinical-research-synthesizer/clinical_research_synthesizer/specialists/compound_analyzer/tools/: predict_toxicity.py
clinical-research-synthesizer/clinical_research_synthesizer/specialists/literature_researcher/: agent.py  prompt.py
clinical-research-synthesizer/clinical_research_synthesizer/specialists/literature_researcher/tools/: extract_text_from_pdf.py.bk  fetch_and_extract_full_text.py  fetch_and_extract_full_text.py.bk  fetch_articles.py  summarize_paper_with_medgemma.py
clinical-research-synthesizer/clinical_research_synthesizer/specialists/search_specialist/: agent.py
clinical-research-synthesizer/clinical_research_synthesizer/specialists/search_specialist/tools/: pmc_search.py
clinical-research-synthesizer/deployment/: deploy.py  deploy_medgemma.py  deploy_to_gemini_enterprise.sh  setup_and_deploy.sh
drug-discovery_agent/: README.md  pyproject.toml
drug-discovery_agent/deployment/: deploy.py
drug-discovery_agent/drug_discovery_agent/: agent.py  prompt.py
drug-discovery_agent/drug_discovery_agent/specialists/compound_analyzer/: agent.py
medical-research/: .env.example  README.md  pyproject.toml
medical-research/deployment/: deploy.py  test_deployment.py
medical-research/medical-research/: prompt.py
medical-research/medical-research/sub_agents/medical_search/: tools.py
(+1 files in other folders)
